--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [package]
 name = "librualg"
+description = "Collection of basic algorithms for everyday development"
+license = "MIT"
 version = "0.1.0"
 authors = ["myduomilia <myduomilia@gmail.com>"]
 edition = "2018"
