--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "librualg"
 description = "Collection of basic algorithms for everyday development"
 license = "MIT"
+repository = "https://github.com/myduomilia/librualg"
 version = "0.1.0"
 authors = ["myduomilia <myduomilia@gmail.com>"]
 edition = "2018"
