--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: rust
 rust:
   - stable
+before_script:
+  - rustup component add rustfmt
+  - rustup component add clippy
+  - cargo install cargo-audit
+  - cargo-tarpaulin
+
 script:
   - cargo build --verbose
   - cargo test --verbose
