--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,11 @@ name = "librualg"
 description = "Collection of basic algorithms for everyday development"
 license = "MIT"
 repository = "https://github.com/myduomilia/librualg"
-version = "0.11.0"
+version = "0.12.0"
 authors = ["myduomilia <myduomilia@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.3"
